Fix the jumpiness between sites with/without scrollbars

--- a/assets/static/css/app.css
+++ b/assets/static/css/app.css
@@ -1,3 +1,9 @@
+html {
+    @media not print {
+        margin-left: calc(100vw - 100%);
+    }
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
 }
